# Morse-Code-Convert

./: README.md  app.py  converter.py  database.db  main.py  netlify.toml  pyproject.toml  requirements.txt
morse_conversion_application.egg-info/: SOURCES.txt
src/: app.py  helpers.py
src/converted_files/morse/: Hello, World (1).txt
src/converted_files/text/: Hello, World.txt
src/morse_conversion_application.egg-info/: PKG-INFO  requires.txt  top_level.txt
src/static/: form_script.js
src/templates/: apology.html  forgot.html  history.html  index.html  register.html
static/: form_styles.css  navbar_script.js  script.js  style.css  type-script.js
templates/: layout.html  login.html
