[project]
name = "morse-conversion-application"
version = "2.0"
description = "The Morse Conversion Web Application is a web-based tool that allows users to convert text to Morse code and vice versa."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cs50>=9.4.0",
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-session>=0.8.0",
    "gunicorn>=23.0.0",
    "werkzeug>=3.0.6",
]
